Fix icon alignment issue

--- a/src/app/core/components/main-menu/main-menu.component.scss
+++ b/src/app/core/components/main-menu/main-menu.component.scss
@@ -81,7 +81,6 @@
           height: 2rem;
           position: absolute;
           right: .2rem;
-          top: -.4rem;
           width: 2rem;
 
           &:hover {
@@ -96,7 +95,6 @@
           height: 2rem;
           position: absolute;
           right: 1rem;
-          top: -.4rem;
           width: 2rem;
 
           &:hover {
